# Vionis

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/models/tiny_frog/: license.txt  model.mtl
include/vionis/: buffer.hpp  camera.hpp  context.hpp  descriptors.hpp  device.hpp  entity_instance.hpp  frame_info.hpp  image.hpp  model.hpp  object_rendering_system.hpp  pipeline.hpp  renderer.hpp  swapchain.hpp  texture.hpp  utils.hpp  vionis.hpp  window.hpp  window_surface.hpp
include/vionis/components/: material_component.hpp  transform_component.hpp
shaders/: build.py
shaders/src/: simple_shader.frag  simple_shader.vert
src/: buffer.cpp  camera.cpp  context.cpp  descriptors.cpp  device.cpp  entity_instance.cpp  image.cpp  main.cpp  model.cpp  object_rendering_system.cpp  pipeline.cpp  renderer.cpp  swapchain.cpp  texture.cpp  window.cpp  window_surface.cpp
src/components/: material_component.cpp  transform_component.cpp
